# CqUsbCam_Linux_Eng

./: CMakeLists.txt  README.md  README_ENG.md
CqUsbCam/: libcyusb.cpp
examples/MT9V034/: CMakeLists.txt  main.cpp
